--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <!-- Some images are from https://fffuel.co go and give them a look! -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
